<resources>
    <string name="app_name">HealthPad</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="health_pad">Health Pad</string>
    <string name="slogan">Always here to help...</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_message">Create a new Account</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="log_message">Please log in</string>
    <string name="settings">Settings</string>
    <string name="change_image">Change Image</string>
    <string name="add_payment">Add Payment</string>
    <string name="save">Save</string>
    <string name="account_settings">Account Settings</string>
    <string name="empty" />
    <string name="expert_tips">Expert Tips</string>
    <string name="doctor_s_corner">Doctor\'s Corner</string>
    <string name="welcome">Welcome to Health Pad</string>
    <string name="clinic_name">Clinic Name</string>
    <string name="first_name">First Name</string>
    <string name="city_town">City / Town</string>
    <string name="last_name">Last Name</string>
    <string name="fill_out">Please fill out the following to get you set up</string>
    <string name="doctor_welcome_msg">How are you today, Doctor</string>
    <string name="sample_post_comment">12 comments</string>
    <string name="sample_post_view">121 views</string>
    <string name="sample_post_msg">Health Pad is here for all your medical needs</string>
    <string name="speciality">Speciality</string>
    <string name="yes">yes</string>
    <string name="doctor_check_title">I am a Doctor</string>
    <string name="req_consul">Request Consultation</string>
    <string name="reviews">Reviews</string>
    <string name="doctor_details">Doctor Details</string>
    <string name="full_name">Full Name</string>
    <string name="accept_consul">Accept Consultation</string>
    <string name="cancel_consul">Cancel Consultation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="disable_account">Disable Doctor Account</string>
    <string name="enable_account">Enable Doctor Account</string>
</resources>
